--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="#contato">Contatos</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="LinkTeste/index.html">Indicadores</a>
                         </li>
                     </ul>
                 </div>     
