--- a/LinkTeste/loja01.html
+++ b/LinkTeste/loja01.html
@@ -11,53 +11,38 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "require.js", "loja01.css"], "outOfDate":[]};
 </script>
   
-  <title>Customer Consultoria</title>
+  <title>loja01</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3910672895"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=504358299" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/loja01.css?crc=339449694" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/open-sans:n6:default;montserrat:n4:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/open-sans:n6:default.js" type="text/javascript"></script>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu823"><!-- group -->
-    <div class="browser_width grpelem" id="u823-bw">
-     <div id="u823"><!-- simple frame --></div>
-    </div>
-    <div class="browser_width grpelem" id="u824-bw">
-     <div class="museBGSize foto01" id="u824"><!-- column -->
-      <div class="clearfix" id="u824_align_to_page">
-       <div class="clearfix colelem" id="u825-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
-        <p id="u825-2">indicadores</p>
-       </div>
-       <a class="nonblock nontext clearfix colelem" id="u2972-4" href="loja01.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content --><p>indicadores loja 1 analise</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u877-4" href="loja02.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content --><p>indicadores loja 2 analise</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u880-4" href="vendas.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content --><p>indicadores vendas diarias</p></a>
+   <div class="browser_width grpelem" id="u926-bw">
+    <div class="museBGSize loja01benfica" id="u926"><!-- column -->
+     <div class="clearfix" id="u926_align_to_page">
+      <div class="clearfix colelem" id="u945-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
+       <p id="u945-2">loja 01</p>
       </div>
-     </div>
-    </div>
-    <div class="browser_width grpelem" id="u826-bw">
-     <div class="rgba-background" id="u826"><!-- group -->
-      <div class="clearfix" id="u826_align_to_page">
-       <div class="museBGSize grpelem" id="u855"><!-- simple frame --></div>
-      </div>
+      <a class="nonblock nontext clearfix colelem" id="u2966-4" href="filialbenfica.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content --><p id="u2966-2">filial Benfica</p></a>
+      <a class="nonblock nontext clearfix colelem" id="u3070-4" href="filialcentro.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content --><p id="u3070-2">filial Centro</p></a>
+      <a class="nonblock nontext clearfix colelem" id="u3886-4" href="filialjoquei.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content --><p id="u3886-2">filial North Shopping Jóquei</p></a>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="818" data-content-above-spacer="817" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="671" data-content-above-spacer="671" data-content-below-spacer="63" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <a class="anchor_item grpelem" id="untitled" data-sizePolicy="fixed" data-pintopage="page_fluidx"></a>
-   <div class="browser_width grpelem" id="u852-bw">
-    <div id="u852"><!-- simple frame --></div>
-   </div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -70,7 +55,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Alguns arquivos no servidor podem estar ausentes ou incorretos. Limpe o cache do navegador e tente novamente. Se o problema persistir, entre em contato com o autor do site.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musepolyfill.bgsize"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
